--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install: gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
     - export LC_CTYPE=en_US.UTF-8
     - set -o pipefail
-    - "xcodebuild -project test/ios-tests.xcodeproj -scheme 'Mapbox GL Tests' -destination 'platform=iOS Simulator,name=iPad,OS=7.1' test" | xcpretty -c
+    - xcodebuild test -project test/ios-tests.xcodeproj -scheme 'Mapbox GL Tests' -destination 'platform=iOS Simulator,name=iPad,OS=7.1' | xcpretty -c
 
 notifications:
   hipchat:
