--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ os: osx
 
 language: objective-c
 
+env:
+  global:
+  - secure: "eiVLhBHBBOFHX8q3WH4iQ0p27GQKoXYRLIW8htEDrRycZQsA0QD2uzHwgy6ETkOvPreNi5mTUB8XIwXwlqUcsakz/n5t8Ldo26uhFQ0qNNxC4y3S3SsQtswqS8Ar4teUTwLyd+CJ/rV3BPvsZyUgvfTaflL4fBEWmONzG9c8twQ="
+  - secure: "DwhodIBCpSaaCkx+VG8wqj1RsPwM891RgG2XqIhlSonifbAW7P8dLfUrCehmtuxAjLnkagMImxufzAzaXaz1SJi6jOeJFQeWRwmPudKNF1iswKmXJtSReX/AIRZew2HfhJhAR1cNNVuAWvbNBTCdwZdxeOZzI+0yfCuzyGg2tgQ="
+  - secure: "auL37lttA5NKT4dUFYrg/xk3cX1KfXF5slzEVBXEVTvMpM0mm65FZ9+Z/eg2W4zxUhIVPm8TBbNeZaE+8ahudqUfhS3/2JBq9C/xqzTPmnTmZGSsxqCCNy9xt3NvvRSpMNzadz1pjH4l5ekFxw5Xr+rHYw63qqKANvAOy4bhcfs="
+
 before_install:
     - sudo pip install awscli
     - git clone --depth 1 https://github.com/mapbox/mapbox-gl-native .mbgl
