fixes #53: update Core Location API for iOS 8

--- a/app/Info.plist
+++ b/app/Info.plist
@@ -43,5 +43,7 @@
 	</array>
 	<key>NSHumanReadableCopyright</key>
 	<string>(c) 2014 Mapbox</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The map will be centered on the user&apos;s location.</string>
 </dict>
 </plist>
